--- a/node.ini
+++ b/node.ini
@@ -1,4 +1,4 @@
 {"node_type":0}
-{"piece_cnt":41}
-{"comp_cnt":23}
-{"port_cnt":0}
+{"node_piece_cnt":41}
+{"node_device_cnt":23}
+{"node_port_cnt":0}
